--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="src/com/derek/videoinfo/json-lib-2.3-jdk15.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
